# oplo

./: .gitignore  README.md  pyproject.toml
docs/: TILED_VIEWER.md
scripts/: process_demo.py
src/oplo/: __init__.py  config.py  pipeline.py  processor_registry.py  processors.py  processors_old.py  registry.py  router.py  server.py  state.py
src/oplo/io/: image_io.py
src/oplo/pages/: browser.py  browser_callbacks.py  viewer.py  viewer_callbacks.py
src/oplo/plugins/: __init__.py  dicom_reader.py  fits_reader.py
tests/: test_image_io.py  test_pipeline.py  test_pipeline_bundle.py
