[build-system]
requires = ["setuptools>=88", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oplo"
version = "0.1.0"
description = "Oplo -- Optical processing learning and observation tool kit"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Noel Niles}]
license = {text = "MIT"}
keywords = ["computer-vision", "imaging", "machine-vision", "image-processing",
            "optics", "photometry", "scientific-imaging", "vision"]
dependencies = [
    "dash>=2.18.0",
    "dash-bootstrap-components>=1.6.0",
    "plotly>=5.24.1",
    "numpy>=1.26",
    "pillow>=10.4.0",
    "tifffile>=2024.8.30",
    "imagecodecs>=2024.1.1; platform_system != 'Windows', platform_machine != 'aarch64'",
    "pydicom>=2.4.4",
    "rawpy>=0.19.0",
    "astropy>=6.0.0",
    "opencv-contrib-python>=4.12.0"
]

[pyproject.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "black", "pytest-dash"]

[project.scripts]
oplo = "oplo.server:main"