[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oplo"
version = "0.0.1"
description = "Oplo – Open Perception & Light Observatory (interactive high-bit image viewer)"
authors = [ { name = "Your Name" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

# Runtime deps (loose pins; lock later with pip-compile)
dependencies = [
    "dash>=2.14",
    "dash-bootstrap-components>=1.5",
    "plotly>=5.18",
    "numpy>=1.23",
    "pillow>=10.0",
    "tifffile>=2023.7",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
# extras you can install with: pip install -e .[extra]
extra = [
    "pydicom>=2.4",
    "rawpy>=0.18",
    "astropy>=6.0",
    "imagecodecs>=2023.1",
    "h5py>=3.10",
]
# dev tools: pip install -e .[dev]
dev = [
    "pytest>=7.0",
    "pip-tools>=7.3",
]

[project.scripts]
oplo-dev = "oplo.server:run_dev"
oplo-serve = "oplo.server:run_prod"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# allow assets (css, js, etc)
oplo = ["assets/*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
